<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:id="@+id/item_title"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentTop="true"
      android:gravity="center"
        >
        <TextView
          android:id="@+id/title_name"
          android:layout_width="0dip"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:text="@string/item_title_text"
          android:textSize="18dip"
        android:gravity="center"
            />
      <EditText
          android:id="@+id/title_edit"
          android:layout_width="0dip"
          android:layout_height="fill_parent"
          android:layout_weight="3"
          android:hint="@string/item_title_hint"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_memo"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_below="@+id/item_title"
      android:gravity="center"
        >
        <TextView
          android:id="@+id/memo_name"
          android:layout_width="0dip"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:text="@string/item_memo_text"
          android:textSize="18dip"
        android:gravity="center"
            />
      <EditText
          android:id="@+id/memo_edit"
          android:layout_width="0dip"
          android:layout_height="fill_parent"
          android:layout_weight="3"
          android:hint="@string/item_memo_hint"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/item_memo"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/image_name"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/item_image_text"
            android:textSize="18dip"
            android:gravity="center"
            />
        <ImageView
            android:id="@+id/image_edit"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:contentDescription="@string/item_image_text"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_button"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
      android:gravity="center"
        >
        <Button
            android:id="@+id/button_cancel"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:text="@string/bottun_cancel_text"
          android:textSize="18dip"
            />
        <Button
            android:id="@+id/button_done"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:text="@string/bottun_done_text"
          android:textSize="18dip"
            />
        </LinearLayout>

</RelativeLayout>
